# KanDuSurfe

./: .gitignore  Cargo.toml  KanDuSurfe.cs  README.md
.github/workflows/: build_and_release.yml  deploy.yml  test_deployment.yml
Models/: Direction.cs  Spot.cs  SpotResponse.cs  YrResponse.cs
Services/: ForecastService.cs
csharp/Properties/: launchSettings.json
csharp/Services/: SpotService.cs
rust/: Cargo.toml  forecastAuto
rust/src/: functions.rs  main.rs
rust/src/functions/: get_forecast.rs  get_response.rs  get_spots.rs  get_surfdays.rs
rust/src/models/: forecast.rs  spot.rs  surf_constants.rs
src/: functions.rs  main.rs  models.rs
src/functions/: get_forecast.rs  get_response.rs  get_spots.rs  get_surfdays.rs  mod.rs
src/models/: date.rs  forecast.rs  mod.rs  response.rs  spot.rs  surf_constants.rs  surfday.rs
tests/: integration_test.rs
