[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.22"
itertools = "0.10.3"
warp = "0.3.2"
openssl-sys = { version = "0.9.75", features = ["vendored"] }
serde_json = "1.0.85"

[features]
vendored = ["openssl-sys/vendored"]
