[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "handler_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
itertools = "0.10"
warp = "0.3"
openssl-sys = { version = "0.9", features = ["vendored"] }
async-trait = "0.1"

[features]
vendored = ["openssl-sys/vendored"]
