[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "handler_lib"
path = "src/lib.rs"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
itertools = "0.10"
async-trait = "0.1"
anyhow = "1.0"

[target.x86_64-unknown-linux-musl.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"] 